; ModuleID = '/home/carl/AnghaBench/streem/src/extr_iter.c_exec_count.c'
source_filename = "/home/carl/AnghaBench/streem/src/extr_iter.c_exec_count.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.count_data = type { i64 }

@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@strm_filter = common dso_local global i32 0, align 4
@iter_count = common dso_local global i32 0, align 4
@count_finish = common dso_local global i32 0, align 4
@STRM_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i32*, i32*)* @exec_count to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @exec_count(i32* %0, i32 %1, i32* %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca %struct.count_data*, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  store i32* %3, i32** %8, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = load i32, i32* %6, align 4
  %12 = load i32*, i32** %7, align 8
  %13 = call i32 @strm_get_args(i32* %10, i32 %11, i32* %12, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0))
  %14 = call %struct.count_data* @malloc(i32 8)
  store %struct.count_data* %14, %struct.count_data** %9, align 8
  %15 = load %struct.count_data*, %struct.count_data** %9, align 8
  %16 = getelementptr inbounds %struct.count_data, %struct.count_data* %15, i32 0, i32 0
  store i64 0, i64* %16, align 8
  %17 = load i32, i32* @strm_filter, align 4
  %18 = load i32, i32* @iter_count, align 4
  %19 = load i32, i32* @count_finish, align 4
  %20 = load %struct.count_data*, %struct.count_data** %9, align 8
  %21 = bitcast %struct.count_data* %20 to i8*
  %22 = call i32 @strm_stream_new(i32 %17, i32 %18, i32 %19, i8* %21)
  %23 = call i32 @strm_stream_value(i32 %22)
  %24 = load i32*, i32** %8, align 8
  store i32 %23, i32* %24, align 4
  %25 = load i32, i32* @STRM_OK, align 4
  ret i32 %25
}

declare dso_local i32 @strm_get_args(i32*, i32, i32*, i8*) #1

declare dso_local %struct.count_data* @malloc(i32) #1

declare dso_local i32 @strm_stream_value(i32) #1

declare dso_local i32 @strm_stream_new(i32, i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
